[metadata]
name = egnn_jax
version = attr: egnn_jax.__version__
author = Gianluca Galletti
author_email = g.galletti@tum.de
description = E(3) GNN in jax
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.8


[options]
packages = egnn_jax
python_requires = >=3.8
install_requires =
    dm_haiku==0.0.9
    jax==0.4.1
    jaxlib==0.4.1
    jraph==0.0.6.dev0
    numpy>=1.23.4
    optax==0.1.3
